# on-demand-minecraft

./: .editorconfig  .gitignore  Main.hs  default.nix  on-demand-minecraft.cabal  readme.md  testit
app/: Main.hs  Socket.hs
lib/: Config.hs  Connection.hs  DigitalOcean.hs  Minecraft.hs  Socket.hs  State.hs  Timeout.hs
lib/Minecraft/: Effect.hs  Packet.hs  Protocol.hs  Types.hs
tests/: Main.hs
