cabal-version:       2.2
name:                on-demand-minecraft
version:             0.1.0.0
synopsis:
-- description:
homepage:
license:             GPL-3.0-or-later
author:              Silvan Mosberger
maintainer:          contact@infinisil.com
copyright:           2020 Silvan Mosberger
category:
build-type:          Simple
extra-source-files:  readme.md

executable on-demand-minecraft
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.12 && < 5
                     , on-demand-minecraft
                     , network
                     , store
                     , bytestring
                     , stm
                     , aeson
                     , text

library
  hs-source-dirs:      lib
  exposed-modules:     Socket
                     , Minecraft
  default-language:    Haskell2010
  build-depends:       base >= 4.12 && < 5
                     , network
                     , socket-activation
                     , stm
                     , store
                     , bytestring
                     , text
                     , contravariant
                     , aeson


test-suite on-demand-minecraft-tests
  hs-source-dirs:      tests
  main-is:             Main.hs
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  build-depends:       base >= 4.12 && < 5
                     , on-demand-minecraft
                     , hspec
                     , store
                     , bytestring
                     , QuickCheck
                     , quickcheck-instances
